--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@lens-chain/sdk": "canary",
+    "@lens-protocol/client": "canary",
+    "@lens-protocol/react": "canary",
+    "@radix-ui/react-avatar": "^1.1.6",
+    "@radix-ui/react-hover-card": "^1.1.10",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@tanstack/react-query": "^5.74.4",
+    "connectkit": "^1.9.0",
+    "cookies-next": "^5.1.0",
+    "next-themes": "^0.4.6",
+    "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
+    "viem": "^2.27.2",
+    "wagmi": "^2.14.16",
+    "zod": "^3.24.3",
     "@copilotkit/react-core": "1.8.9",
     "@copilotkit/react-ui": "1.8.9",
     "@copilotkit/runtime": "1.8.9",
