--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@lens-protocol/react": "canary",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-hover-card": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.10",
     "@radix-ui/react-scroll-area": "^1.2.5",
     "@tanstack/react-query": "^5.74.4",
