--- a/ui/package.json
+++ b/ui/package.json
@@ -9,40 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@lens-chain/sdk": "canary",
-    "@lens-protocol/client": "canary",
-    "@lens-protocol/react": "canary",
-    "@radix-ui/react-avatar": "^1.1.6",
-    "@radix-ui/react-hover-card": "^1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-alert-dialog": "^1.1.10",
-    "@radix-ui/react-scroll-area": "^1.2.5",
-    "@tanstack/react-query": "^5.74.4",
-    "connectkit": "^1.9.0",
-    "cookies-next": "^5.1.0",
-    "next-themes": "^0.4.6",
-    "uuid": "^11.1.0",
-    "vaul": "^1.1.2",
-    "viem": "^2.27.2",
-    "wagmi": "^2.14.16",
-    "zod": "^3.24.3",
     "@copilotkit/react-core": "1.8.9",
     "@copilotkit/react-ui": "1.8.9",
     "@copilotkit/runtime": "1.8.9",
+    "@hookform/resolvers": "^5.0.1",
+    "@lens-chain/sdk": "canary",
+    "@lens-chain/storage-client": "^1.0.4",
+    "@lens-protocol/client": "canary",
+    "@lens-protocol/metadata": "^2.0.0",
+    "@lens-protocol/react": "canary",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.10",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.5",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@tanstack/react-query": "^5.74.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "connectkit": "^1.9.0",
+    "cookies-next": "^5.1.0",
     "lucide-react": "^0.451.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.6",
     "openai": "^4.85.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
+    "viem": "^2.27.2",
+    "wagmi": "^2.14.16",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
